# csmmendpoint

./: .cursorrules  .env.example  .gitignore  Alberton Tyre Clinic Summary.txt  Next Level UI_UX Design Research.txt  South African Tire Stock Research.txt  Tire Brand Deep Dive for Social Media.txt  project_overview.txt  pyproject.toml  workshop_layout_description.txt
.cursor/rules/: brand-bibles.mdc
.streamlit/: config.toml
Miwesu wood/: Apple Ad Style Analysis and Replication (2).txt  Audience FULL.txt  Audience ULTIMATE Merged.txt  Samsung Brand Research Index (1).txt  Samsung Marketing Analysis Framework_ (1).txt
alberton Battery Mart/: 0001.txt  Alberton Battery Mart Social Media Plan.txt  Alberton Battery Mart Website Research.txt  Battery Leads Alberton Germiston Research.txt  Keyword Research for Alberton Battery Market.txt  abmproject.txt
docs/: GENERATION_PLAYBOOK.md
docs/brands/: README.md  alberton-tyre-clinic.md
scripts/: add_client_miwesu_firewood.py  update_miwesu_client_from_research.py  upsert_absolute_offroad.py  upsert_alberton_battery_mart.py  upsert_alberton_brand.py
src/: analytics.py  app.py  asset_pipeline.py  bulk_actions.py  content_calendar.py  crew.py  database.py  engagement_learner.py  image_generation.py  json_utils.py  main.py  overlay_pil.py  roles.py  seed_clients.py  video_prompts.py
src/config/: __init__.py  agents.yaml  brand_vault.py  tasks.yaml  vertical_creative.py
static/: titan_ad_exporter.html
